# tetris-using-ecs

./: CMakeLists.txt  Component.cpp  README.md  main.cpp  tetris_ecs.sln
src/: ClearlineSystem.cpp  ClearlineSystem.h  Component.cpp  Component.h  Game.cpp  Game.h  InputSystem.cpp  InputSystem.h  LifetimeSystem.cpp  LifetimeSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  RestartSystem.cpp  RestartSystem.h  SpawnSystem.cpp  SpawnSystem.h  main.cpp
tetris-ecs/: Component.h  EnitityManager.cpp  EntityManager.h  Game.cpp  Game.h  tetris_ecs.vcxproj  tetris_ecs.vcxproj.filters
tetris-ecs/tetris_ecs/x64/Debug/: tetris_ecs.exe.recipe  tetris_ecs.ilk  vc143.idb
tetris-ecs/tetris_ecs/x64/Debug/tetris_ecs.tlog/: CL.command.1.tlog  Cl.items.tlog  link.read.1.tlog  link.write.1.tlog  tetris_ecs.lastbuildstate
tetris-ecs/tetris_ecs/x64/Release/: tetris_ecs.exe.recipe
tetris-ecs/tetris_ecs/x64/Release/tetris_ecs.tlog/: CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog
tetris_ecs/x64/Debug/tetris_ecs.tlog/: CL.write.1.tlog  link.command.1.tlog  link.secondary.1.tlog
tetris_ecs/x64/Release/: tetris_ecs.iobj  tetris_ecs.ipdb
tetris_ecs/x64/Release/tetris_ecs.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.secondary.1.tlog  link.write.1.tlog  tetris_ecs.lastbuildstate
